--- a/src/app/account/templates/account.tpl.html
+++ b/src/app/account/templates/account.tpl.html
@@ -1,5 +1,5 @@
 <ui-view>
-	<article class="container-fluid">
+	<!-- <article class="container-fluid">
 		<h3 class="page-header">Account</h3>
 		<form name="ProfileUpdateForm" ng-submit="account.update()" novalidate autocomplete="off">
 			<div class="row">
@@ -32,5 +32,5 @@
 			<button type="button" class="btn btn-default" ng-disabled="ProfileUpdateForm.$pristine" ng-click="account.resetForm(ProfileUpdateForm)">Revert Changes</button>
 			<button type="button" class="btn btn-default" ui-sref=".changePassword">Change Password</button>
 		</form>
-	</article>
+	</article> -->
 </ui-view>
