--- a/src/app/buildOrder/templates/buildOrder.top.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.top.tpl.html
@@ -20,7 +20,7 @@
                     <ordercloud-search servicename="products" controlleras="buildOrder" placeholder="Search" search="buildOrder.search" attribute="buildorder-search" change=""></ordercloud-search>
                 </div>
             </div>
-			<div class="buildordersummaryheader" ng-show="showOrdersummary">
+			<!-- <div class="buildordersummaryheader" ng-show="showOrdersummary">
                 <a ng-click="BacktoOrder()">
 				<span>
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -32,10 +32,10 @@
 						</g>
 					</svg>
 				</span> Back </a>
-            </div>
-			<div class="buildordersummaryheader" ng-show="orderDetails">	
+            </div> -->
+			<!--<div class="buildordersummaryheader" ng-show="orderDetails">-->	
                 <!-- <a ng-click="backTocreate()"> -->
-				<a href="javascript: window.history.go(-1)">
+				<!-- <a href="javascript: window.history.go(-1)">
 				<span>
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						 viewBox="-27.9 72.8 42 28" style="enable-background:new -27.9 72.8 42 28;" xml:space="preserve">
@@ -46,7 +46,7 @@
 						</g>
 					</svg>
 				</span>Back</a>
-            </div>
+            </div> -->
         </div>
     </div>
     <!--Header ends here -->
