--- a/src/app/hold/less/hold.less
+++ b/src/app/hold/less/hold.less
@@ -49,7 +49,7 @@
 		height:30px;
 		line-height:30px;
 		.helvetica-bold;
-		font-size:12px;
+		font-size:0.750em;
 		border:1px solid @base-bg-purple-light;
 		background-color:transparent;
 		.background-fade;
@@ -66,12 +66,12 @@
 		}
 	h1{
 		.helvetica-bold;
-		font-size: 25px;
+		font-size: 1.563em;
 		margin:0;
 	}
 	h2{
 		.helvetica-bold;
-		font-size: 15px;
+		font-size: 0.938em;
 		padding: 10px;
 		background-color: @color20;
 		height: 35px;
@@ -99,14 +99,14 @@
 		}
 		p{
 			.helvetica-bold;
-			font-size: 14px;
+			font-size: 0.875em;
 			.in-block;
 			text-align:right;
 			width:12%;
 		}
 		input{
 			.in-block;
-			font-size:14px;
+			font-size:0.875em;
 			.helvetica-regular;
 			height:28px;
 			line-height: 25px;
@@ -125,7 +125,7 @@
 		height:30px;
 		line-height:30px;
 		.helvetica-bold;
-		font-size:12px;
+		font-size:0.750em;
 		border:1px solid @base-bg-purple-light;
 		background-color:transparent;
 		.background-fade;
@@ -154,7 +154,7 @@
 		height:30px;
 		line-height:30px;
 		.helvetica-bold;
-		font-size:12px;
+		font-size:0.750em;
 		border:1px solid @base-bg-purple-light;
 		background-color:transparent;
 		.background-fade;
