--- a/src/app/login/less/login.less
+++ b/src/app/login/less/login.less
@@ -70,7 +70,7 @@ body,
   h2 {
     color: #a77bca;
 	.helvetica-bold;
-	font-size:37px;
+	font-size:2.313em;
     margin: 0;
 	text-align:left;
   }
@@ -82,7 +82,7 @@ body,
 	  border: none;
       background: #ffffff;
       padding: 0;
-	  font-size: 18px;
+	  font-size: 1.125em;
 	  .login-lock{
 		height: 50px;
 		display: block;
@@ -98,11 +98,11 @@ body,
     }
     .form-control {
 		.helvetica-regular;
-		font-size:17px;
+		font-size:1.063em;
 		height: 64px;
 		border-radius: 0;
 		border: none;
-		color:#cfcfd1;
+		color:#060606;
 		box-shadow: none;
 		-webkit-box-shadow: 0 0 0 50px white inset !important;
     }
@@ -111,7 +111,7 @@ body,
 		top:63px;
 		color:#d80c0c;
 		.helvetica-regular;
-		font-size:12px;
+		font-size:0.750em;
 		left:70px;
 	}
   }
@@ -131,7 +131,7 @@ body,
 		text-transform: uppercase;
 		transition: all .25s;
 		.helvetica-bold;
-		font-size:19px;
+		font-size:1.188em;
 		.background-fade;
 		&:hover{
 			background-color:@primary-dark-color;
@@ -168,8 +168,8 @@ body,
     text-align: center;
     padding: 50px 0 5px 0;
     cursor: pointer;
-	.helvetica-bold;
-	font-size:18px;
+	.helvetica-regular;
+	font-size:1.125em;
     margin: 0 0 25px 0;
     text-transform: uppercase;
 }
@@ -188,7 +188,7 @@ body,
 .tabs input[type=radio]:checked + label {
   border-bottom: 3px solid #d6e03d;
   color: #060606;
-  .helvetica-bold;
+ .helvetica-regular;
   transition: all .3s;
 }
 #tab1:checked ~ .login-tab,
@@ -237,7 +237,7 @@ body,
 		text-transform: uppercase;
 		transition: all .25s;
 		.helvetica-bold;
-		font-size: 17px;
+		font-size: 1.063em;
 		.background-fade;
 		&:hover{
 			background-color:@primary-dark-color;
