--- a/src/app/orderClaim/templates/orderClaimFooter.tpl.html
+++ b/src/app/orderClaim/templates/orderClaimFooter.tpl.html
@@ -2,7 +2,7 @@
 	<div class="claim-edit">
 		<div class="cancel-claim"><a href="javascript: window.history.go(-1)">Cancel Claim</a></div>
 		<!-- <div class="continue-claim" ng-click="orderClaim.orderclaimarr==null || orderClaim.completeclaim(orderClaim.orderID)" ng-disabled="orderClaim.orderclaimarr==null" ng-class="{disabled: orderClaim.orderclaimarr==null}">Complete Claim</div> -->
-		<div class="continue-claim" ng-hide="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.orderclaimarr==null || orderClaim.continueclaim()" ng-disabled="orderClaim.orderclaimarr==null" ng-class="{disabled: orderClaim.orderclaimarr==null}">Continue</div>
+		<div class="continue-claim" ng-hide="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.orderclaimarr==null || orderClaim.continueclaim()" ng-disabled="orderClaim.orderclaimCheck.length==0" ng-class="{disabled: orderClaim.orderclaimCheck.length==0}">Continue</div>
 		<div class="continue-claim" ng-show="orderClaim.orderclaimsummaryshow" ng-click="orderClaim.completeclaim(orderClaim.orderID)">Complete Claim</div>
 	</div>
 </div>
