--- a/src/app/account/less/account.less
+++ b/src/app/account/less/account.less
@@ -1,7 +1,7 @@
 .container-fluid.change-password{
 	color: @primary-color;
 	.helvetica-bold;	
-    font-size: 37px;
+    font-size:1em;
     margin: 0;
     text-align: left;
 	width:30%;
@@ -15,16 +15,16 @@
   	transform: translateY(-50%);
   	border-radius:4px;
 	.form-group{
-		margin-bottom:0;
+		margin:10px 0; 
 		label{
 			color: #060606;
-			.helvetica-bold;
-			font-size: 18px;
+			.helvetica-regular;
+			font-size:1em;
 		}
 		input[type="password"]{
 			border: 1px solid #e4e6ea;
 		    .helvetica-regular;
-		    font-size: 16px;
+		    font-size: 1em;
 		    line-height: 25px;
 		    text-indent: 5px;
 		    height:40px;
@@ -37,27 +37,20 @@
 		}
 		.error-msg{
 			color: #d80c0c;
-			font-size: 12px;
+			font-size: 0.750em;
 			.helvetica-regular;
 			margin-bottom:0;
 		}
 	}
 	button{
-		color: #fff;
-		background-color:@primary-color;
-		border-color: @primary-color;
-		border: 1px solid @primary-color;
-		border-radius: 2px;
-		height: 45px;
-		text-transform: uppercase;
-		font-size: 19px;
-		width:@width0;
-		margin:20px 0 30px 0;
-		.background-fade;
+		.purple-big;
+		margin-bottom:10px;
+		border:none;
 	}
 	.page-header{
-		padding-bottom: 20px;
+		padding-bottom:20px;
     	margin: 20px 0 0 0;
+    	font-size: 1.125em;
 	}
 }
 
