--- a/src/app/buildOrder/templates/buildOrder.down.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.down.tpl.html
@@ -1,15 +1,16 @@
 <div class="build-order-footer" ng-show="application.headerstat" id="build-order-footer">
 	<!-- <div class="order-checkout" id="order-checkout" ng-click="gotoCheckout();OrderSummary();"> -->
 	<div class="order-checkout" id="order-checkout">
-		<button ng-if="!showOrdersummary && !buildOrderDown.orderdetails" ng-disabled="buildOrderDown.buildorderfooter" ng-click="buildOrderDown.SaveAllLineItems()" ng-class="{savedisabled: buildOrderDown.buildorderfooter}">SAVE &amp; PROCEED</button>
-		<button ng-if="showOrdersummary || buildOrderDown.orderdetails && buildOrderDown.orderhistorydetails" ng-click="gotoCheckout();OrderSummary();">PROCEED TO CHECKOUT</button>
+		<button ng-if="!showOrdersummary && !buildOrderDown.orderdetails" ng-disabled="buildOrderDown.buildorderfooter" ng-click="buildOrderDown.SaveAllLineItems()" ng-class="{savedisabled: buildOrderDown.buildorderfooter}">Save &amp; Proceed</button>
+		<!-- <button ng-if="showOrdersummary || buildOrderDown.orderdetails && buildOrderDown.orderhistorydetails" ng-click="gotoCheckout();OrderSummary();">PROCEED TO CHECKOUT</button> -->
+		<button class="proceed-check" ng-if="showOrdersummary || buildOrderDown.orderdetails && buildOrderDown.orderhistorydetails" ng-click="gotoCheckout();">Proceed To Checkout</button>
 		<div class="order-total">
 			<p>Order Total</p>
 			<span ng-if="orderTotal">{{orderTotal | currency}}</span>
 			<span ng-if="!orderTotal">$0.00</span>
 		</div>
 	</div>
-	<div class="cancel-order" ng-disabled="buildOrderDown.buildorderfooter" ng-click="buildOrderDown.CancelToolTip()" popover-trigger="none" popover-is-open="buildOrderDown.ShowCancelOrderToolTip && !buildOrderDown.buildorderfooter" uib-popover-template="buildOrderDown.ToolTip.templateUrl" ng-class="{savedisabled: buildOrderDown.buildorderfooter}"  ng-if="!buildOrderDown.orderdetails && !buildOrderDown.buildorderfooter">
+	<div class="cancel-order" ng-disabled="buildOrderDown.buildorderfooter" ng-click="buildOrderDown.CancelToolTip()" popover-trigger="none" popover-is-open="buildOrderDown.ShowCancelOrderToolTip && !buildOrderDown.buildorderfooter" uib-popover-template="buildOrderDown.ToolTip.templateUrl" ng-class="{savedisabled: buildOrderDown.buildorderfooter}"  ng-if="!buildOrderDown.orderdetails && !buildOrderDown.buildorderfooter && !buildOrderDown.editsubmitorder">
 		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			viewBox="0 0 34 34" style="enable-background:new 0 0 34 34;" xml:space="preserve" class="footer-svg">
 			<g transform="translate(0,-952.36218)">
@@ -30,7 +31,7 @@
 			</div>
 		</script>
 	</div>
-	<div class="save-later" ng-disabled="buildOrderDown.buildorderfooter" ng-click="buildOrderDown.buildorderfooter || saveLaterPopup()" ng-class="{savedisabled: buildOrderDown.buildorderfooter}" ng-if="!buildOrderDown.orderdetails && !buildOrderDown.buildorderfooter">
+	<div class="save-later" ng-disabled="buildOrderDown.buildorderfooter" ng-click="buildOrderDown.buildorderfooter || saveLaterPopup()" ng-class="{savedisabled: buildOrderDown.buildorderfooter}" ng-if="!buildOrderDown.orderdetails && !buildOrderDown.buildorderfooter && !buildOrderDown.editsubmitorder">
 		<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			 viewBox="-630.3 455.4 25.2 24" style="enable-background:new -630.3 455.4 25.2 24;" xml:space="preserve" class="footer-svg">
 		<polygon points="-617.7,456.4 -614.9,464.8 -606.1,464.8 -613.2,470 -610.5,478.5 -617.7,473.3 -624.8,478.5 
@@ -47,8 +48,8 @@
 		<h5>ReOrder</h5>
 	</div>
 </div>
-<modal title="Save Order For Later" visible="showModal" id="mymodal" class="modal-pop-up">
+<modal title="Save Order For Later" visible="showModal" id="mymodal" class="modal-pop-up save-later">
 	Save Order As <span class="star">*</span>:<br/>
 	<input type="text" ng-model="saveOrderTxt" /><br/>
-	<input type="button" ng-click="saveForLater(saveOrderTxt)" ng-disabled="!saveOrderTxt" value="SAVE" />
+	<input type="button" ng-click="saveForLater(saveOrderTxt)" ng-disabled="!saveOrderTxt" value="Save" class="save"/>
 </modal>
