--- a/src/app/buildOrder/templates/buildOrder.plp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.plp.tpl.html
@@ -21,18 +21,19 @@
 <div cg-busy="{promise:buildOrder.PLPLoader,templateUrl:'common/loading-indicators/templates/view.loading.tpl.html'}"></div>
 <div class="oms_main_container" ng-show='showplp'>
 	<div ng-if="buildOrder.searchval.length > 2" ng-init="buildOrder.cleardata()">
-		<h1 ng-if="buildOrder.searchval.length > 2 && buildOrder.buildorderSearch.length != 0">Search Results for <span>"{{buildOrder.searchval}}"</span> <span class="count">({{buildOrder.buildorderSearch.length}} products)</span></h1>
-		<h1 ng-if="buildOrder.buildorderSearch.length == 0 && buildOrder.searchval.length > 2">No results found for <span>"{{buildOrder.searchval}}"</span></h1>
+		<h1 ng-if="buildOrder.searchval.length > 2 && buildOrder.buildorderSearch[0].length != 0">Search Results for <span>"{{buildOrder.searchval}}"</span> <span class="count">({{buildOrder.buildorderSearch[1]}} products)</span></h1>
+		<h1 ng-if="buildOrder.buildorderSearch[0].length == 0 && buildOrder.searchval.length > 2">No results found for <span>"{{buildOrder.searchval}}"</span></h1>
 		<ul class="plp-container">
-			<li class="col-md-4" ng-repeat="products in buildOrder.buildorderSearch track by $index" ng-if="buildOrder.searchval.length > 0" >
+			<li class="col-md-4 plp-block-main" ng-repeat="products in buildOrder.buildorderSearch[0] track by $index" ng-if="buildOrder.searchval.length > 0" >
+				<span ng-if="products.IsWorkShopEvent">event</span>
 				<div class="plp-block" ng-click="buildOrder.prouctsList(products)">
 					<div class="product_img">
 						<img ng-model="prodImage" ng-src="{{buildOrderPLP.alfrescoAccessURL}}/imagefinder/{{products.ID}}?alf_ticket={{buildOrderPLP.alfrecoTct}}"/>
 					</div>
 					<div class="plp-product-data">
 						<h2>{{products.Name}}</h2>
-						<h3><span class="variant" ng-if="products.Size!='' && products.Size!=null">Size</span> <span>{{products.Size}}</span></h3>
-						<h4><span class="variant" ng-if="products.Color!='' && products.Color!=null">Color</span> <span>{{products.Color}}</span></h4>
+						<h3><span class="variant" ng-if="products.Size!='' && products.Size!=null">Size</span> <span class="variant1">{{products.Size}}</span></h3>
+						<h4><span class="variant" ng-if="products.Color!='' && products.Color!=null">Color</span> <span class="variant1">{{products.Color}}</span></h4>
 						<div class="price_lst">
 							<h5>{{products.Price | currency}}</h5>
 						</div>
@@ -42,11 +43,11 @@
 		</ul>
 	</div>
 	<!-- product Searched results -->
-	<div class="home-search-list" ng-if="buildOrder.searchType == 'Products' &&  buildOrder.searchList.length >= 0">
-		<h1 ng-if="buildOrder.searchList.length > 0">Search Results for <span>"{{buildOrder.searchTxt}}"</span> <span class="count">({{buildOrder.searchList.length}} products)</span></h1>
+	<div class="home-search-list" ng-if="buildOrder.searchType == 'Products' &&  buildOrder.searchList[0].length >= 0">
+		<h1 ng-if="buildOrder.searchList[0].length > 0">Search Results for <span>"{{buildOrder.searchTxt}}"</span> <span class="count">({{buildOrder.searchList[1]}} products)</span></h1>
 		<!-- <h1 ng-if="buildOrder.searchList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1> -->
 		<ul class="plp-container">
-			<li class="col-md-4" ng-repeat="prod in buildOrder.searchList track by $index">
+			<li class="col-md-4 plp-block-main" ng-repeat="prod in buildOrder.searchList[0] track by $index">
 				<div class="plp-block">
 					<div ng-click="buildOrder.prouctsList(prod)">
 						<div class="product_img">
@@ -54,8 +55,8 @@
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3><span class="variant" ng-if="prod.Size!='' && prod.Size!=null">Size</span> <span>{{prod.Size}}</span></h3>
-							<h4><span class="variant" ng-if="prod.Color!='' && prod.Color!=null">Color </span><span>{{prod.Color}}</span></h4>
+							<h3><span class="variant" ng-if="prod.Size!='' && prod.Size!=null">Size</span> <span class="variant1">{{prod.Size}}</span></h3>
+							<h4><span class="variant" ng-if="prod.Color!='' && prod.Color!=null">Color </span><span class="variant1">{{prod.Color}}</span></h4>
 							<div class="price_lst">
 								<h5 class="Price">{{prod.Price | currency}}</h5>
 							</div>	
@@ -70,7 +71,7 @@
 		<h1 ng-if="buildOrder.searchSeqList.length > 0">Search Results for <span>"{{buildOrder.prodName}}"</span></h1>
 		<!-- <h1 ng-if="buildOrder.searchSeqList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1> -->
 		<ul class="plp-container">
-			<li class="col-md-4" ng-repeat="prod in buildOrder.searchSeqList track by $index">
+			<li class="col-md-4 plp-block-main" ng-repeat="prod in buildOrder.searchSeqList track by $index">
 				<div class="plp-block">
 					<div ng-click="buildOrder.showProduct(prod)">
 						<div class="product_img">
@@ -78,8 +79,8 @@
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3><span class="variant" ng-if="prod.xp.SpecsOptions.Size!='' && prod.xp.SpecsOptions.Size!=null">Size </span><span>{{prod.xp.SpecsOptions.Size}}</span></h3>
-							<h4><span class="variant" ng-if="prod.xp.SpecsOptions.Color!='' && prod.xp.SpecsOptions.Color!=null">Color</span> <span>{{prod.xp.SpecsOptions.Color}}</span></h4>
+							<h3><span class="variant" ng-if="prod.xp.SpecsOptions.Size!='' && prod.xp.SpecsOptions.Size!=null">Size </span><span class="variant1">{{prod.xp.SpecsOptions.Size}}</span></h3>
+							<h4><span class="variant" ng-if="prod.xp.SpecsOptions.Color!='' && prod.xp.SpecsOptions.Color!=null">Color</span> <span class="variant1">{{prod.xp.SpecsOptions.Color}}</span></h4>
 							<div class="price_lst">
 								<h5 class="Price">{{prod.StandardPriceSchedule.PriceBreaks[0].Price | currency}}</h5>
 							</div>	
@@ -90,11 +91,11 @@
 		</ul>
 	</div>
 	<!-- category Product List starts -->
-	<div class="home-search-list" ng-if="buildOrder.searchType == 'plp' && buildOrder.catList.length>0">
-		<h1 ng-if="buildOrder.catList.length > 0">Products under the category <span>"{{buildOrder.catName}}"</span> <span class="count">({{buildOrder.catList.length}} products)</span></h1>
+	<div class="home-search-list" ng-if="buildOrder.searchType == 'plp' && buildOrder.catList[0].length>0">
+		<h1 ng-if="buildOrder.catList[0].length > 0">Products under the category <span>"{{buildOrder.catName}}"</span> <span class="count">({{buildOrder.catList[1]}} products)</span></h1>
 		<!-- <h1 ng-if="buildOrder.catList.length == 0">No Products found</span></h1> -->
 		<ul class="plp-container">
-			<li class="col-md-4" ng-repeat="prod in buildOrder.catList track by $index">
+			<li class="col-md-4 plp-block-main" ng-repeat="prod in buildOrder.catList[0] track by $index">
 				<div class="plp-block">
 					<div ng-click="buildOrder.prouctsList(prod)">
 						<div class="product_img">
@@ -102,8 +103,8 @@
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3><span class="variant" ng-if="prod.Size!='' && prod.Size!=null">Size</span> <span>{{prod.Size}}</span></h3>
-							<h4><span class="variant" ng-if="prod.Color!='' && prod.Color!=null">Color</span> <span>{{prod.Color}}</span></h4>
+							<h3><span class="variant" ng-if="prod.Size!='' && prod.Size!=null">Size</span> <span class="variant1">{{prod.Size}}</span></h3>
+							<h4><span class="variant" ng-if="prod.Color!='' && prod.Color!=null">Color</span> <span class="variant1">{{prod.Color}}</span></h4>
 							<div class="price_lst">
 								<h5 class="Price">{{prod.Price | currency}}</h5>
 							</div>	
@@ -158,5 +159,57 @@
 				</div>
 			</li>
 		</ul>
+	</div>
+	<div class="search-container" ng-if="((buildOrder.searchType=='User' || buildOrder.searchType=='BuildOrder')&& buildOrder.searchval.length < 3) || ((buildOrder.searchType=='User' || buildOrder.searchType=='BuildOrder') && buildOrder.searchval==undefined)">
+		<p><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 1190.6 841.9" style="enable-background:new 0 0 1190.6 841.9;" xml:space="preserve">
+	<g>
+			<g>
+				<path class="search0" d="M441.6,300.3c0-151.2,123-274.3,274.3-274.3c151.2,0,274.3,123,274.3,274.3c0,151.3-123,274.3-274.3,274.3
+					C564.6,574.6,441.6,451.6,441.6,300.3z M496.5,300.3c0,121,98.4,219.4,219.4,219.4c121,0,219.4-98.4,219.4-219.4
+					S836.9,80.9,715.9,80.9C594.9,80.9,496.5,179.4,496.5,300.3z"/>
+				<path class="search1" d="M503.9,126.5c-38.9,47.4-62.3,107.9-62.3,173.9c0,151.3,123,274.3,274.3,274.3c65.9,0,126.5-23.4,173.8-62.3
+					c38.9-47.4,62.3-107.9,62.3-173.9c0-151.2-123-274.3-274.3-274.3C611.9,64.2,551.3,87.6,503.9,126.5z M458.4,338.5
+					c0-70.2,33.3-132.6,84.7-172.8C583.3,114.2,645.7,81,715.9,81c121,0,219.4,98.4,219.4,219.4c0,70.2-33.2,132.6-84.7,172.8
+					c-40.2,51.4-102.6,84.7-172.8,84.7C556.8,557.9,458.4,459.4,458.4,338.5z"/>
+				<path class="search0" d="M355.9,660.3c-10.7-10.7-10.7-28.1,0-38.8l160-160c10.7-10.7,28.1-10.7,38.8,0c10.7,10.7,10.7,28.1,0,38.8
+					l-160,160c-5.3,5.3-12.4,8-19.4,8C368.3,668.3,361.3,665.6,355.9,660.3z"/>
+				<path class="search2" d="M347.5,613c9.5-9.5,24.8-9.5,34.3,0l21.4,21.4c9.5,9.4,9.5,24.8,0,34.3l-140,140c-9.5,9.5-24.8,9.5-34.3,0
+					l-21.4-21.4c-9.5-9.5-9.5-24.8,0-34.3L347.5,613z"/>
+			</g>
+			<path class="search3" d="M934.6,299.9c0,120.7-98.1,218.8-218.8,218.8c-120.7,0-218.8-98.1-218.8-218.8c0-120.7,98.1-218.8,218.8-218.8
+				C836.5,81.1,934.6,179.2,934.6,299.9L934.6,299.9z M934.6,299.9"/>
+			<g>
+				<defs>
+					<rect id="SVGID_1_" x="497" y="80.9" width="437.8" height="438.8"/>
+				</defs>
+				<clipPath id="SVGID_2_">
+					<use xlink:href="#SVGID_1_"  style="overflow:visible;"/>
+				</clipPath>
+				<path class="search4" d="M561.2,145.3c85.4-85.4,223.7-85.4,309.1,0c85.4,85.4,85.4,223.7,0,309.1"/>
+			</g>
+			<path class="search1" d="M814.3,307.5H617.3c-6,0-11.3-1.5-11.3-7.5c0-6,5.3-7.5,11.3-7.5h197.1c6,0,11.3,1.5,11.3,7.5
+				C825.6,306,820.3,307.5,814.3,307.5L814.3,307.5z M814.3,307.5"/>
+			<path class="search1" d="M715.8,409c-6,0-7.5-4.5-7.5-11.3V201.4c0-6,1.5-11.3,7.5-11.3c6,0,7.5,4.5,7.5,11.3v197.1
+				C723.3,404.5,721.8,409,715.8,409L715.8,409z M715.8,409"/>
+		</g>
+		</svg>
+		</p>
+		<p class="search-add">Search and Add</p>
+		<p>Search a product to Add to the Order</p>
+	</div>
+	<div ng-if="totalItems>50 && (buildOrder.searchList[0].length > 0 || buildOrder.catList[0].length>0)">
+		<uib-pagination total-items="totalItems" boundary-link-numbers="true" max-size="maxSize" class="pagination-sm" data-ng-model="currentPage" previous-text="Prev" next-text="Next" items-per-page="itemsPerPage" ng-change="buildOrder.setPagingData(currentPage)"></uib-pagination>
+<!-- 		<div>
+			show <input type="number" ng-model="buildOrder.noOfHits"> Of {{totalItems}}
+		</div> -->
+	</div>
+	<div ng-if="buildOrder.buildorderSearch[1]>50 && buildOrder.searchval.length > 2">
+		<div ng-init="totalItems=buildOrder.buildorderSearch[1]">
+		<uib-pagination total-items="totalItems" boundary-link-numbers="true" max-size="maxSize" class="pagination-sm" data-ng-model="currentPage" previous-text="Prev" next-text="Next" items-per-page="itemsPerPage" ng-change="buildOrder.setPagingData(currentPage)"></uib-pagination>
+<!-- 		<div>
+			show <input type="number" ng-model="buildOrder.noOfHits"> Of {{totalItems}}
+		</div> -->
+		</div>
 	</div>
 </div>
