--- a/src/app/home/less/home.less
+++ b/src/app/home/less/home.less
@@ -1,6 +1,6 @@
 	.container-fluid.home-template{
 		.modal-pop-up.promotionsModal .modal-dialog{
-			width:97% !important;
+			width:80% !important;
 			.modal-body{
 				position:static !important;
 				background-color:@color20;
@@ -15,44 +15,63 @@
 					overflow-y:auto;
 					padding-right:1%;
 					.promotion_box{
-						width:19%;
-						margin-bottom:5px;
+						width:24%;
+						margin-bottom:10px;
 					}
 				}
 				.promo-pagination{
 					width:95.5%;
 					position:absolute;
-					bottom:0;
+					bottom:0px;
 					height:30px;
+					.pagination-next.disabled,.pagination-prev.disabled{
+					 display:none;
+					}
 				}
-				.pagination{
-					margin:8px 0 0 0;
-					float:right;
+				/*.pagination{
+					    padding-left: 0;
+					    margin: 5px 0 0 0;
+					    border-radius: 4px;
 					li {
 						a{
-							padding:2px 10px;
-							font-size:0.875em;
-							.helvetica-medium;
-							color:@primary-dark-color;
+							    font-size:0.688em;
+							    .helvetica-regular;
+							    margin: 0 5px;
+							    border: 1px solid #f3f3f3;
+							    font-weight: 700;
+							    color: #424242;
+							    width: 20px;
+							    height: 20px;
+							    line-height: 17px;
+							    padding: 0;
+							    text-align: center;
 						}
 						&:last-child a, &:first-child a{
-							font-size:1.063em;
-							padding:0 10px;
-							background-color:@green-hover;
-							color:@color0;
+							box-shadow: none;
+						    border: none;
+						    font-size:0.875em;
+						    .helvetica-regular;
+						    width: initial;
+						    line-height: 20px;
+						    margin: 0 0px;
+						    color: #424242;
+						    height: 20px;
+						    padding: 0;
+						    text-align: center;
+						    background: transparent;
 						}
 					}
 					.active{
 						a{
-							background-color:@primary-dark-color;
-							color:@color0;
-							border-color:@base-bg-purple-light;
+						    background-color: #666;
+						    border: 1px solid #9f9f9f;
+						    color: #fff;
 						}
 					}
 					&:hover{
 						color:@primary-dark-color;
 					}
-				}
+				}*/
 			}
 			.modal-header{
 				h4{
@@ -78,8 +97,7 @@
 					border-top-left-radius: 5px;
 					border-top-right-radius: 5px;
 					.ui-grid-header-cell-wrapper {
-						text-transform: uppercase;
-						font-size: 1em;
+						font-size: 0.875em;
 						line-height:26px;
 						.helvetica-bold;
 						color:@color1;
@@ -106,7 +124,7 @@
 										padding-top: 4px;
 										span{
 											.helvetica-bold;
-											font-size:1em;
+											font-size:0.857em
 										}
 									}
 								}
@@ -143,7 +161,7 @@
 				.ui-grid-cell {
 					height: 39px;
 					.helvetica-regular;
-					font-size:0.906em;
+					font-size:0.781em;
 					padding: 11px 5px 8px 16px;
 					.data_cell {
 						line-height: 1;
@@ -152,7 +170,7 @@
 					.ui-grid-cell-contents {
 						padding: 0;
 						.helvetica-regular;
-						font-size:0.938em;
+						font-size:1.12em;
 					}
 					input[type="checkbox"] {
 						margin: 11px 0 0 16px;
@@ -236,7 +254,7 @@
 		}
 		input[type=text].ui-grid-filter-input{
 			text-indent:10px;
-			font-size:0.875em;
+			font-size:0.75em;
 			border-radius:3px;
 			border:1px solid @color21;
 			.helvetica-regular;
@@ -262,7 +280,7 @@
 }
 
 body .fc { /* extra precedence to overcome jqui */
-	font-size: 1em;
+	font-size: 0.875em;
 }
 
 
@@ -322,7 +340,7 @@ body .fc { /* extra precedence to overcome jqui */
 	display: inline-block;
 	height: 1em;
 	line-height: 1em;
-	font-size: 1em;
+	font-size: 0.875em;
 	text-align: center;
 	overflow: hidden;
 	font-family: "Courier New", Courier, monospace;
@@ -414,7 +432,7 @@ NOTE: use percentage font sizes or else old IE chokes
 	padding: 0 .6em;
 
 	/* text & cursor */
-	font-size: 1em; /* normalize */
+	font-size: 0.875em; /* normalize */
 	white-space: nowrap;
 	cursor: pointer;
 }
@@ -559,7 +577,7 @@ previous button's border...
 }
 
 .fc-unthemed .fc-popover .fc-header .fc-close {
-	font-size: 0.9em;
+	font-size: 0.775em;
 	margin-top: 2px;
 }
 
@@ -617,7 +635,7 @@ hr.fc-divider {
 	table-layout: fixed;
 	border-collapse: collapse;
 	border-spacing: 0;
-	font-size: 1em; /* normalize cross-browser */
+	font-size: 0.875em; /* normalize cross-browser */
 }
 
 .fc th {
@@ -1446,7 +1464,7 @@ be a descendant of the grid when it is being dragged.
 	height: 8px;
 	overflow: hidden;
 	line-height: 8px;
-	font-size: 0.813em;
+	font-size: 0.688em;
 	font-family: monospace;
 	text-align: center;
 	cursor: s-resize;
@@ -1509,7 +1527,7 @@ be a descendant of the grid when it is being dragged.
 /*Calender Styles*/
 .fc-ltr .fc-basic-view .fc-day-number {
 	text-align: left;
-	font-size: 1.375em;
+	font-size:1.400em;
 	.helvetica-bold;
 	color: #a576ca;
 	padding-left: 10px;
@@ -1518,14 +1536,14 @@ be a descendant of the grid when it is being dragged.
 	    position: relative;
 	    top: 20px;
 	    color: #9a9a9a;
-	    font-size:1.625em;
+	    font-size:1.5em;
 	    .helvetica-regular;
 	    line-height: normal;
 	}
 	&.fc-today {
 		color:#8c58b5;
 		position: relative;
-		font-size: 1.4em;
+		font-size: 1.275em;
 	}
 }
 .fc-unthemed .fc-today {
@@ -1542,7 +1560,7 @@ be a descendant of the grid when it is being dragged.
 }
 .fc-event {
 	color: #000;
-	font-size:1em;
+	font-size:0.875em;
 	.helvetica-regular;
 	padding-left: 10px;
 	position: relative;
@@ -1566,17 +1584,10 @@ be a descendant of the grid when it is being dragged.
 .fc-day-grid-event .fc-content {
 	white-space: normal;
 }
-.fc-other-month {
-	position: relative;
-	&:before {
-		content: '';
-		position: absolute;
-		display: block;
-		top: 0;
-		left: 0;
-		right: 0;
-		height: 100%;
-		background-color: #f7f7f7;
+table{
+	.fc-other-month.fc-past {
+		position: relative;
+		color:#808080 !important;
 	}
 }
 .quickViewModal .modal-dialog{
@@ -1684,17 +1695,17 @@ be a descendant of the grid when it is being dragged.
 	}
 }
 */
-
+ 
 .calendarModal{
        .calendar{
-			.fc-toolbar {
+      .fc-toolbar {
 				margin: 0;
 				padding: 15px 0;
 				background-color:#a576ca;
 				color: #fff;
 				.fc-left, .fc-right {
 					padding: 0 20px;
-					font-size: 1em;
+					font-size: 0.875em;
 					button {
 						border: none;
 						background-color:#a576ca;
@@ -1710,7 +1721,7 @@ be a descendant of the grid when it is being dragged.
 						}
 						.fc-icon {
 							color: #fafafa;
-							font-size:1em;
+							font-size:1.400em;
 							.helvetica-regular;
 							height: 28px;
 							line-height: 28px;
@@ -1720,20 +1731,20 @@ be a descendant of the grid when it is being dragged.
 					}
 				}
 				.fc-icon-left-single-arrow:after {
-					font-size: 1.8em;
+					font-size: 1.675em;
 					position: absolute;
 					top: -2px;
 					left: -15px;
 				}
 				.fc-icon-right-single-arrow:after {
-					font-size: 1.625em;
+					font-size: 1.5em;
 					position: absolute;
 					top: -2px;
 					right: -15px;
 				}
 				.fc-center {
 					h2 {
-						font-size:1.375em;
+						font-size:1.25em;
 						.helvetica-bold;
 					}
 				}
@@ -1749,7 +1760,7 @@ be a descendant of the grid when it is being dragged.
 								.fc-day-header {
 									border: none;
 									color: #fafafa;
-									font-size:1.125em;
+									font-size: 1.400em;
 									.helvetica-regular;
 									padding: 10px 0;
 								}
@@ -1772,6 +1783,7 @@ be a descendant of the grid when it is being dragged.
 			}
 			.fc-title{
 				cursor:pointer;
+				font-size: 1.556em;
 			}
 		}	
 }
