--- a/src/app/orderClaim/templates/orderClaim.tpl.html
+++ b/src/app/orderClaim/templates/orderClaim.tpl.html
@@ -3,7 +3,7 @@
 	<div class="container-fluid order-claim-page" ng-if="!orderClaim.orderclaimsummaryshow">
 		<div class="order-claim-container">
 			<div class="back-common">
-				<a href="javascript: window.history.go(-1)">Back</a>
+				<a href="javascript: window.history.go(-1)"> <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 14 21" style="enable-background:new 0 0 14 21" xml:space="preserve"><style type="text/css">.st0{fill:#8B8E96;}</style><g><path d="M0.7,18.3l7.8-7.8L0.7,2.7L3,0.3l10.2,10.2L3,20.7L0.7,18.3z"></path></g></svg>Back To Previous Page</a>
 			</div>
 			<div class="custom-details">
 				<span class="custom">Creating Order Claim for: </span>
@@ -43,7 +43,7 @@
 									 <div class="Checkbox-visible"></div>
 									</div> -->
 									<div>
-											<input type="checkbox" ng-disabled="orderSummary.selectresolution=='' || orderSummary.selectcode==''" ng-model="orderSummary.checkclaim" id="key{{$index}}" ng-click="orderClaim.selectorderclaims(orderSummary)" class="checkbox-custom" >
+											<input type="checkbox" ng-model="orderSummary.checkclaim" id="key{{$index}}" ng-click="orderClaim.selectorderclaims(orderSummary)" class="checkbox-custom" >
 											<label for="key{{$index}}" class="checkbox-custom-label"></label>
 <!-- 										<input type="checkbox" ng-disabled="orderSummary.selectresolution=='' || orderSummary.selectcode==''" ng-model="orderSummary.checkclaim" ng-click="orderClaim.selectorderclaims(orderSummary)" 
 										id="orderclaim" class="checkbox-custom" style="opacity: 1;" > -->
@@ -55,7 +55,7 @@
 									<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 product-img">
 										<img ng-model="prodImage" ng-src="{{orderClaim.alfrescoAccessURL}}/imagefinder/{{orderSummary.Product.ID}}?alf_ticket={{orderClaim.alfrecoTct}}"/>
 									</div>
-									<div class="col-xs-7 col-sm-7 col-md-7 col-lg-7 pro-details">
+									<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 pro-details">
 										<h1>{{orderSummary.Product.Name}}</h1>
 										<p>SKU #{{orderSummary.Product.ID}} </p>
 										<p>Size: {{orderSummary.Product.xp.SpecsOptions.Size}}</p>
@@ -186,12 +186,12 @@
 									</div>
 								</td>
 								<td class="item">
-									<select name="singleSelect" ng-init="orderSummary.selectresolution=''" ng-model="orderSummary.selectresolution" ng-options="resolution for resolution in orderClaim.refund.Resolutions" ng-change="orderSummary.resolution(resolution)">
+									<select name="singleSelect" ng-init="orderSummary.selectresolution=''" ng-model="orderSummary.selectresolution" ng-options="resolution for resolution in orderClaim.refund.Resolutions" ng-change="orderClaim.selectorderclaims(orderSummary)">
 										<option value="">Select</option>
 									</select>
 								</td>
 								<td class="item">
-									<select name="singleSelect" ng-init="orderSummary.selectcode=''" ng-model="orderSummary.selectcode" ng-options="code for code in orderClaim.refund.ReasonCode" ng-change="orderSummary.code(code)">
+									<select name="singleSelect" ng-init="orderSummary.selectcode=''" ng-model="orderSummary.selectcode" ng-options="code for code in orderClaim.refund.ReasonCode" ng-change="orderClaim.selectorderclaims(orderSummary)">
 										<option value="">Select</option>
 									</select>
 								</td>
