--- a/src/app/orderConfirmation/less/orderConfirmation.less
+++ b/src/app/orderConfirmation/less/orderConfirmation.less
@@ -18,8 +18,8 @@
 			a{
 				    height: 40px;
 				   .helvetica-regular;
-				    font-size: 17px;
-				    margin: 27px 0 0 20px;
+				    font-size: 1.063em;
+				    margin: 30px 0 0 20px;
 				    color: #ffffff;
 				    display: block;
 				&:hover{
@@ -30,6 +30,8 @@
 				    width: 15px;
 				    transform: rotate(-180deg);
 				    height: 13px;
+				    float:left;
+				    margin-top:6px;
 				}
 			}
 		}
@@ -45,7 +47,7 @@
 			    h2{
 			    	    display: inline-block;
 					   .helvetica-bold;
-					    font-size: 28px;
+					    font-size: 1.750em;
 					    margin-top: 24px
 			    }
 			}
@@ -56,14 +58,13 @@
 	.orderConfirm{
 		width: 80%;
 	    position: absolute;
-
-	    
 	    top: 50%;
 	    left: 0;
 	    right: 0;
 	    margin: auto;
 	    text-align: center;
 	    transform: translateY(-50%);
+	    padding:0;
 	    p.orderConfirm-title{
 	    	color:#8B5BB3;
 	    	font-size:2em;
@@ -79,8 +80,8 @@
 	    }
 	    div.orderConfirm-mailContent{
 	    	text-align: center;
-	    	display:inline-block;
-	    	width:60%;
+	    	margin:0 auto;
+	    	width:65%;
 		    p.orderConfirm-mail, p.orderConfirm-sendToDiff{
 		    	color:#666666;
 		    	font-size: 1.2em;
@@ -89,38 +90,32 @@
 		    	span{
 		    		color:#000;
 		    		font-size: 1.5em;
+		    		margin-left:10px;
 		    	}
 		    	input{
 		    		border:1px solid @color21;
 		    		height:45px;
 		    		padding-left:5px;
-		    		width: 55%;
-	    			margin-left: 10px;
+		    		width: 50%;
 	    			background-color: @color23;
 	    			color: @color26;
+	    			margin-left: 18px;
+				    border-radius: 5px;
+				    height: 35px;
 		    	}
 		    }
 		}
 		div.orderConfirm-Btn{
-			button.sendBtn{
-				width: 10%;
-			    padding: 5px 10px;
-			    margin-left: 24px;
-			    margin-top: 15px;
-			    background-color: @primary-color;
-			    color: #fff;
-			    .background-fade;
-			    &:hover{
-			    background-color: @primary-dark-color;
-			    }
+			width:100%;
+			float:left;
+			.sendBtn{
+				.purple-big;
+				margin-left:53px;
+				padding: 0 25px;
 			}
 			.printBtn{
-				float: right;
-			    margin: 20px 0!important;
-			    width: 20% !important;
-			    padding: 10px !important;
-
-			}
+				margin: 20px 0 0 7%;
+			   }
 		}
 		.print-order{
 		    border-top: 1px solid #ccc;
@@ -129,15 +124,17 @@
 		    a{
 		    	float: right;
 			    color: #a77bca;
-			    font-size:20px;
+			    font-size:1.250em;
 			    border-bottom: 1px solid #ccc;
 			    text-decoration:none;
 		    }
 		}
 		.print-order-header{
-			    font-size: 20px;
+			    font-size: 1.250em;
 				margin: 10px 0px;
 				.helvetica-bold;
+				float:left;
+				width:100%;
 		}
 		.select-store-container{
 				border-top: 1px solid #ccc;
@@ -148,7 +145,7 @@
 			    .helvetica-regular;
 			     margin-bottom:20px;
 		.select-title{
-				font-size:15px;
+				font-size:0.938em;
 				padding: 0px;
 			    width: 25%;
 			    margin: 0px 2%;
@@ -157,7 +154,7 @@
 			.radio-common {
 				label{
 					.helvetica-regular;
-					font-size:15px;
+					font-size:0.938em;
 				}
 				.radio{
 					top: 4px;
@@ -174,11 +171,11 @@
 		    margin-top:20px;
 			label{
 				    line-height: 33px;
-				    text-align: right;
-				    margin-right: 25px
+    				text-align: right;
+    				width: 40%;
 			}
 			.form-control{
-				width:35%;
+				    width: 47%;
 				p{
 					text-align:left;
 				}
